test/files/pos/sd248/Test_2.scala
package p

object PropTest {
  def t = new Prop.Whitelist
}
