test/files/neg/t10552/Test_2.scala
object B {
  def t = A.f
}
